Change the color of footer

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
   </div>
 
 
-<footer class="py-5 bg-primary">
+<footer class="py-5 bg-success">
     <div class="container d-flex justify-content-end">
             <div class=" text-danger mx-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
